gcc/testsuite/rust/rustc/ui/issues/issue-41229-ref-str.rs
pub fn example(ref s: str) {}
// { dg-error ".E0277." "" { target *-*-* } .-1 }

fn main() {}

